syntax = "proto3";

package codex.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "codex/v1/common.proto";
import "codex/v1/message.proto";

// Chat = одна розмова (web або telegram). Тримає `codex_thread_id` для
// rehydrate Codex-сесії після рестарту FastAPI.

enum ChatSource {
  CHAT_SOURCE_UNSPECIFIED = 0;
  CHAT_SOURCE_WEB         = 1;
  CHAT_SOURCE_TELEGRAM    = 2;
}

message Chat {
  int64 id = 1;
  int64 user_id = 2;
  ChatSource source = 3;
  optional int64 tg_chat_id = 4;
  // Reserved — поки sidecar in-memory, завжди NULL. Коли Codex CLI почне
  // персистити thread state — почнемо писати ID для rehydration.
  optional string codex_thread_id = 5;
  optional string title = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp last_msg_at = 8;
}

message ListChatsRequest {
  Pagination pagination = 1;
}

message ListChatsResponse {
  repeated Chat chats = 1;
}

message GetChatRequest {
  int64 chat_id = 1;
}

message RenameChatRequest {
  int64 chat_id = 1;
  string title = 2;
}

message DeleteChatRequest {
  int64 chat_id = 1;
}

message RunTurnRequest {
  optional int64 chat_id = 1;
  string text = 2;
  // Attachments uploaded via UploadsService.Upload prior to this turn.
  // Server resolves each to a presigned URL and passes to the sidecar as
  // multimodal input alongside `text`. If any of these is audio/*, server
  // also synthesizes a TTS reply ("voice in → voice out").
  repeated int64 upload_ids = 3;
  // Client-generated idempotency key. Server persists in assistant message
  // meta and echoes back in DoneEvent so client can swap temp→real id
  // without remounting the DOM bubble.
  string client_id = 4;
}

message ChatEvent {
  oneof kind {
    TokenEvent token = 1;
    ToolCallEvent tool_call = 2;
    ToolResultEvent tool_result = 3;
    DoneEvent done = 4;
    ErrorEvent error = 5;
    TurnStartedEvent turn_started = 7;
  }
  // Redis Stream ID (`<ms>-<seq>`); client передає у `TailTurnRequest.after_id`
  // для resume-on-reconnect. Empty для in-process events що не пройшли через stream.
  string event_id = 6;
}

// First event у RunTurn stream — несе local `turn_id` для per-turn reconnect.
// Client зберігає до DoneEvent/ErrorEvent і шле у TailTurnRequest.turn_id.
message TurnStartedEvent {
  int64 turn_id = 1;
}

message TokenEvent {
  string delta = 1;
}

message ToolCallEvent {
  string name = 1;
  google.protobuf.Struct args = 2;
}

message Attachment {
  string kind = 1;
  string source = 2;
  string caption = 3;
}

message ToolResultEvent {
  string name = 1;
  string text = 2;
  repeated Attachment attachments = 3;
  optional string error = 4;
}

message DoneEvent {
  int64 chat_id = 1;
  string final_text = 2;
  // Persisted assistant message snapshot. Client uses it to swap temp draft
  // id → real DB id (via client_id match) and apply final meta (upload_ids,
  // calls) without round-tripping ListMessages.
  Message message = 3;
  // True = текст пішов у running turn через server-side steer; client знімає streaming placeholder без порожньої баблі.
  bool steered_fallback = 4;
}

message ErrorEvent {
  string code = 1;
  optional string detail = 2;
}

message InterruptTurnRequest {
  int64 chat_id = 1;
}

message InterruptTurnResponse {}

// Resume mid-turn stream після reconnect. Server XREADає per-turn Redis stream
// `turn:{turn_id}:events`. Якщо turn вже terminal — повертає synthetic
// terminal event з `turns.status` і закривається.
message TailTurnRequest {
  // Legacy: lookup latest/active turn for chat. Залишено для backwards-compat
  // зі старими client-білдами. Нові client'и шлють `turn_id`.
  int64 chat_id = 1;
  // Останній event_id який клієнт встиг отримати ("" = з початку буфера).
  string after_id = 2;
  // Per-turn primary handle: server tail-ить саме цей `turns.id`. Якщо set,
  // `chat_id` ігнорується.
  optional int64 turn_id = 3;
}

// Append text to the currently running turn (codex's `turn/steer` RPC).
// If no turn is running, server returns accepted=false and the client should
// fall back to RunTurn.
message SteerTurnRequest {
  int64 chat_id = 1;
  string text = 2;
}

message SteerTurnResponse {
  bool accepted = 1;
}

message StreamCodexUsageRequest {}

message RefreshCodexUsageRequest {}

message UsageWindow {
  double used_percent = 1;
  int32 window_minutes = 2;
  optional google.protobuf.Timestamp resets_at = 3;
}

// Sidecar may not expose `account/rateLimits/read` — in that case all fields
// stay unset and client treats it as "no data".
message CodexUsage {
  optional string plan_type = 1;
  optional UsageWindow primary = 2;
  optional UsageWindow secondary = 3;
}

service ChatService {
  rpc ListChats(ListChatsRequest) returns (ListChatsResponse);
  rpc GetChat(GetChatRequest) returns (Chat);
  rpc RenameChat(RenameChatRequest) returns (Chat);
  rpc DeleteChat(DeleteChatRequest) returns (Empty);
  rpc RunTurn(RunTurnRequest) returns (stream ChatEvent);
  rpc TailTurn(TailTurnRequest) returns (stream ChatEvent);
  rpc InterruptTurn(InterruptTurnRequest) returns (InterruptTurnResponse);
  rpc SteerTurn(SteerTurnRequest) returns (SteerTurnResponse);
  // Server-pushed Codex rate-limit snapshots. Bootstrap on connect (cache
  // snapshot для instant first frame), далі pub/sub-driven (event на кожен
  // `finalize_once`). Жодного periodic polling.
  rpc StreamCodexUsage(StreamCodexUsageRequest) returns (stream CodexUsage);
  // Force-fetch usage з sidecar (для manual refresh кнопки). Side effect:
  // publish у pub/sub channel → всі підписані StreamCodexUsage клієнти теж
  // отримають новий snapshot.
  rpc RefreshCodexUsage(RefreshCodexUsageRequest) returns (CodexUsage);
}
