syntax = "proto3";

package codex.v1;

import "google/protobuf/timestamp.proto";
import "codex/v1/common.proto";

// Upload = файл завантажений юзером (web drag-drop, TG attachment) АБО
// згенерований Codex sidecar'ом (image_generation outputs). Binary живе
// у S3/MinIO; тут лише метадата + s3_path для resolve.

message Upload {
  int64 id = 1;
  optional int64 chat_id = 2;
  string filename = 3;
  string mime = 4;
  int32 size = 5;
  string s3_path = 6;
  optional string extracted_text = 7;  // PDF/DOCX/MD витягнутий текст для context'у
  google.protobuf.Timestamp created_at = 8;
}

// Single-request upload — Connect-Web не підтримує client-streaming, тож
// шлемо весь blob у одному unary запиті. Для типових pasted screenshots
// (~kB-MB) це нормально; великі файли резерв'ємо через S3 direct upload.
message UploadOnceRequest {
  optional int64 chat_id = 1;
  string filename = 2;
  string mime = 3;
  bytes data = 4;
}

message UploadResponse {
  Upload upload = 1;
  string presigned_url = 2;       // готова URL для render у UI без extra round-trip
  int32 presigned_ttl_seconds = 3;
}

// Видати presigned URL для існуючого Upload — клієнт знає upload_id з
// `meta.upload_ids` чи `Attachment.upload_id` і шле сюди.
message GetPresignedRequest {
  oneof target {
    int64 upload_id = 1;
  }
  int32 ttl_seconds = 3;  // 0 → default 3600
}

message GetPresignedResponse {
  string url = 1;
  google.protobuf.Timestamp expires_at = 2;
}

message ListUploadsRequest {
  optional int64 chat_id = 1;  // unset → всі юзера
  Pagination pagination = 2;
}

message ListUploadsResponse {
  repeated Upload uploads = 1;
}

message DeleteUploadRequest {
  int64 upload_id = 1;
}

// Run STT over an audio/video upload that already lives in object storage.
// Lets the web composer turn a mic recording into editable text before send,
// while keeping the original blob for history replay.
message TranscribeUploadRequest {
  int64 upload_id = 1;
}

message TranscribeUploadResponse {
  string text = 1;
}

service UploadsService {
  rpc UploadOnce(UploadOnceRequest) returns (UploadResponse);
  rpc GetPresigned(GetPresignedRequest) returns (GetPresignedResponse);
  rpc ListUploads(ListUploadsRequest) returns (ListUploadsResponse);
  rpc DeleteUpload(DeleteUploadRequest) returns (Empty);
  rpc TranscribeUpload(TranscribeUploadRequest) returns (TranscribeUploadResponse);
}
