%% codex_server — Postgres schema ER diagram
%% Source-of-truth. Регенерувати картинку:
%%   1) Скопіювати у https://mermaid.live → Export SVG → docs/schema.svg
%%   2) Або: npx -p @mermaid-js/mermaid-cli mmdc -i docs/schema.mmd -o docs/schema.svg

erDiagram
    USERS ||--o{ CHATS    : "owns"
    USERS ||--o{ UPLOADS  : "owns"
    USERS ||--o{ NOTES    : "owns"
    USERS ||--o{ EVENTS   : "actor (nullable)"
    USERS ||--o{ INVITES  : "creator"
    USERS ||--o{ TURNS    : "actor"
    CHATS ||--o{ MESSAGES : "contains"
    CHATS ||--o{ EVENTS   : "scope (nullable)"
    CHATS ||--o{ UPLOADS  : "scope (SET NULL)"
    CHATS ||--o{ TURNS    : "scope"
    MESSAGES ||--o| TURNS : "user_message (1:1)"
    MESSAGES ||--o| TURNS : "assistant_message (0..1, SET NULL)"

    USERS {
        bigint   id PK
        bigint   tg_user_id      "UQ, nullable, indexed"
        string   email           "UQ, nullable, indexed (255)"
        string   password_hash   "nullable (argon2, 255)"
        string   display_name    "nullable (255)"
        UserRole role            "ENUM(USER, ADMIN), default USER"
        tstz     created_at
        tstz     updated_at
    }

    CHATS {
        bigint     id PK
        bigint     user_id          FK "→ users.id CASCADE, indexed"
        ChatSource source           "ENUM(WEB, TELEGRAM)"
        bigint     tg_chat_id       "nullable; UQ(source, tg_chat_id)"
        string     codex_thread_id  "nullable (255) — in-RAM sidecar id"
        string     title            "nullable (255)"
        tstz       last_msg_at      "default now()"
        tstz       created_at
        tstz       updated_at
    }

    MESSAGES {
        bigint      id PK
        bigint      chat_id  FK   "→ chats.id CASCADE, indexed"
        MessageRole role          "ENUM(USER, ASSISTANT, TOOL, SYSTEM)"
        text        text          "default '', append-only"
        jsonb       meta          "nullable (client_id, upload_ids, calls)"
        tstz        created_at
        tstz        updated_at
    }

    EVENTS {
        bigint    id PK
        bigint    chat_id  FK "→ chats.id CASCADE, nullable, indexed"
        bigint    user_id  FK "→ users.id CASCADE, nullable, indexed"
        EventKind kind        "ENUM (10 values), indexed"
        jsonb     payload     "nullable"
        tstz      created_at
        tstz      updated_at
    }

    UPLOADS {
        bigint id PK
        bigint user_id        FK "→ users.id CASCADE, indexed"
        bigint chat_id        FK "→ chats.id SET NULL, nullable, indexed"
        string filename          "NOT NULL (512)"
        string mime              "NOT NULL (127)"
        int    size              "bytes"
        string s3_path           "NOT NULL (1024) — S3/MinIO key"
        text   extracted_text    "nullable (OCR/STT)"
        tstz   created_at
        tstz   updated_at
    }

    NOTES {
        bigint   id PK
        bigint   user_id      FK "→ users.id CASCADE, indexed"
        string   title           "NOT NULL (255)"
        text     body            "NOT NULL"
        string[] tags            "ARRAY, default '{}', GIN-indexed"
        tsvector search_vector   "GENERATED, GIN-indexed"
        tstz     created_at
        tstz     updated_at
    }

    INVITES {
        bigint   id PK
        string   token              "UQ (64) — url-safe, single-use"
        bigint   created_by_user_id FK "→ users.id CASCADE"
        bigint   used_by_user_id    FK "→ users.id SET NULL, nullable"
        tstz     expires_at         "ix_invites_active partial index"
        tstz     used_at            "nullable; set on Register"
        tstz     created_at
        tstz     updated_at
    }

    TURNS {
        bigint     id PK
        bigint     chat_id              FK "→ chats.id CASCADE, indexed"
        bigint     user_id              FK "→ users.id CASCADE, indexed"
        bigint     user_message_id      FK "→ messages.id SET NULL, NOT NULL on insert"
        bigint     assistant_message_id FK "→ messages.id SET NULL, nullable (lazy bind)"
        TurnStatus status               "ENUM(STARTING,RUNNING,COMPLETED,FAILED,CANCELLED)"
        string     codex_thread_id      "nullable — set by mark_running"
        string     codex_turn_id        "nullable — set by mark_running"
        string     sidecar              "nullable ('admin'|'guest')"
        string     stream_key           "nullable — `turn:{id}:events`"
        string     error_code           "nullable — CodexErrorCode"
        text       error_detail         "nullable"
        string     last_event_id        "nullable — Redis stream cursor"
        tstz       heartbeat_at         "indexed (turns_stale_heartbeat)"
        tstz       completed_at         "nullable; set by finalize_once"
        tstz       created_at
        tstz       updated_at
    }

    %% Indexes
    %% turns_active_per_chat — UNIQUE PARTIAL (chat_id) WHERE status IN ('STARTING','RUNNING')
    %% turns_stale_heartbeat — INDEX (heartbeat_at) WHERE status IN ('STARTING','RUNNING')
    %% turns_by_chat         — INDEX (chat_id, created_at DESC)
    %% turns_by_user         — INDEX (user_id, created_at DESC)
